hphp/hack/test/typecheck/function_ref/function_ref_bug.php.constraint_method_call.exp
ERROR: File "function_ref_bug.php", line 17, characters 13-39:
Invalid argument (Typing[4411])
  File "function_ref_bug.php", line 17, characters 13-39:
  Function readonly mismatch
  File "function_ref_bug.php", line 17, characters 13-39:
  This function is not marked readonly
  File "function_ref_bug.php", line 20, characters 10-14:
  This function is marked readonly
